<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_redpacket_year"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/yearSheetCancelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/yearSheetTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/redpacket_history_sheet_title"
            android:textColor="@color/colorDark"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yearSheetConfirmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textColor="@color/wallet_market_positive"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/wallet_divider_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:paddingVertical="8dp">

        <NumberPicker
            android:id="@+id/yearPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</LinearLayout>
